media/deploy/kubernetes/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media-test
