media/deploy/kubernetes/restful-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    microless: media
    app.kubernetes.io/name: service-gateway
    app.kubernetes.io/instance: k8s-deploy
    app.kubernetes.io/component: service-ingress
    app.kubernetes.io/part-of: media
  name: ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    microless: media
    app.kubernetes.io/name: restful-gateway
    app.kubernetes.io/instance: k8s-deploy
    app.kubernetes.io/component: restful-gateway-service
    app.kubernetes.io/part-of: media
  namespace: media
spec:
  ports:
  - port: 8081
    name: http
    targetPort: http
  selector:
    microless: media
    app.kubernetes.io/name: restful-gateway
    app.kubernetes.io/instance: k8s-deploy
    app.kubernetes.io/component: restful-gateway
    app.kubernetes.io/part-of: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    microless: media
    app.kubernetes.io/name: restful-gateway
    app.kubernetes.io/instance: k8s-deploy
    app.kubernetes.io/component: restful-gateway-deployment
    app.kubernetes.io/part-of: media
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      microless: media
      app.kubernetes.io/name: restful-gateway
      app.kubernetes.io/instance: k8s-deploy
      app.kubernetes.io/component: restful-gateway
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        microless: media
        app.kubernetes.io/name: restful-gateway
        app.kubernetes.io/instance: k8s-deploy
        app.kubernetes.io/component: restful-gateway
        app.kubernetes.io/part-of: media
      name: gateway
    spec:
      containers:
      - name: server
        image: microless/media-gateway:0.1.0
        ports:
        - name: http
          containerPort: 8081
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
            items:
            - key: config.json
              path: config.json
